Replace calls to deprecated Class#newInstance method
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847979 13f79535-47bb-0310-9956-ffa450edef68